--- a/config.json
+++ b/config.json
@@ -4,14 +4,14 @@
         "title": ""
     },
     "boardgamegeek": {
-        "user_name": "YOUR_BGG_USERNAME",
+        "user_name": "maverickmin",
         "extra_params": {
             "own": 1
         }
     },
     "algolia": {
-        "app_id": "YOUR_APP_ID",
-        "api_key_search_only": "YOUR_PUBLIC_API_KEY",
+        "app_id": "8Q8H6ZF4HS",
+        "api_key_search_only": "11e9a986df5819c6f6f677e904f3a6bf",
         "index_name": "YOUR_INDEX_NAME"
     }
 }
