--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
         "title": ""
     },
     "boardgamegeek": {
-        "user_name": "maverickmin",
+        "user_name": "maverickmind",
         "extra_params": {
             "own": 1
         }
